option java_package = "org.umundo.filesystem";

message DirectoryEntry {
	enum Type {
		NAMED_PIPE = 0;
		CHAR_DEV = 1;
		BLOCK_DEV = 2;
		FILE = 3;
		DIR = 4;
		SYMLINK = 5;
		SOCKET = 6;
		UNKNOWN = 7;
  }
	required string name = 1;
	required Type type = 2;
	required string path = 3;
	required int64 size = 4;
	optional string extension = 5;

	repeated string segments = 6;
	
	optional int64 atime_ms = 11;
	optional int64 ctime_ms = 12;
	optional int64 mtime_ms = 13;
	optional int64 btime_ms = 14;
}

message DirectoryListingRequest {
	required string pattern = 1;
}

message DirectoryListingReply {
	repeated DirectoryEntry entries = 1;
}

message DirectoryEntryContent {
	required bytes content = 1;
	required string md5 = 2;
}

service DirectoryListingService {
 	rpc list (DirectoryListingRequest) returns (DirectoryListingReply);
 	rpc get (DirectoryEntry) returns (DirectoryEntryContent);
}

